--- a/2-rotas-e-http/package.json
+++ b/2-rotas-e-http/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.25",
+    "eslint": "^8.57.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   },
