--- a/2-rotas-e-http/package.json
+++ b/2-rotas-e-http/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix"
   },
   "devDependencies": {
