1-configurando NODE_ENV para teste 2-finalização dos testes 3-build com a tsup

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
@@ -25,4 +26,14 @@ dist-ssr
 *.sln
 *.sw?
 
+# Database
 */db/app.db
+*/db/test.db
+
+# Enviroment
+# .env
+# .env.test
+# build
+
+# Build
+build
