--- a/2-rotas-e-http/package.json
+++ b/2-rotas-e-http/package.json
@@ -3,7 +3,8 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
@@ -11,6 +12,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "supertest": "^6.3.4",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
