--- a/2-rotas-e-http/prova-do-modulo/package.json
+++ b/2-rotas-e-http/prova-do-modulo/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "zod": "^3.22.4"
   }
