--- a/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
+++ b/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20.11.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "knex": "node --import tsx ./node_modules/knex/bin/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +19,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.12.2",
     "eslint": "^8.57.0",
+    "sqlite3": "^5.1.7",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   },
@@ -22,6 +27,7 @@
     "@fastify/cookie": "^9.3.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "knex": "^3.1.0",
     "zod": "^3.22.4"
   }
 }
