1-configuração dos testes 2-teste da route user implementado

--- a/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
+++ b/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
@@ -7,7 +7,7 @@
     "node": "20.11.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest --run",
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js"
@@ -18,10 +18,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.12.2",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
