--- a/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
+++ b/2-rotas-e-http/prova-do-modulo-daily-diet/package.json
@@ -7,10 +7,11 @@
     "node": "20.11.1"
   },
   "scripts": {
-    "test": "vitest --run",
     "dev": "tsx watch src/server.ts",
+    "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix",
-    "knex": "node --import tsx ./node_modules/knex/bin/cli.js"
+    "build": "tsup src --out-dir build",
+    "test": "vitest --run"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "eslint": "^8.57.0",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3",
     "vitest": "^1.4.0"
