--- a/3-implementando-o-solid/.env
+++ b/3-implementando-o-solid/.env
@@ -7,4 +7,5 @@ NODE_ENV=dev
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+# DATABASE_URL="postgresql://usuario:senha@localhost:5432/nome-do-banco?schema=public"
