--- a/3-implementando-o-solid/package.json
+++ b/3-implementando-o-solid/package.json
@@ -38,6 +38,7 @@
     "vitest": "1.5.0"
   },
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "7.2.1",
     "@prisma/client": "5.12.1",
     "bcryptjs": "2.4.3",
