--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # coloca o codigo do projeto no ambiente
+      # Coloca o código do projeto no ambiente
       - uses: actions/checkout@v3
-      # instala o node no ambiente
+      # Instala o Node no ambiente
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
-      # nao faz interação com o usuario, não mexe o no package.json, so instala as depedencias
+      # Garante que o diretório correto seja usado para instalar as dependências
       - run: npm ci
         working-directory: ./3-implementando-o-solid
+      # Executa os testes no diretório correto
       - run: npm run test
         working-directory: ./3-implementando-o-solid
-        
