fix: update GitHub Action for project "3-implementando-o-solid"

--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -24,3 +24,5 @@ jobs:
       # Executa os testes no diretório correto
       - run: npm run test
         working-directory: ./3-implementando-o-solid
+      - run: ls -la ./3-implementando-o-solid
+
