fix: update GitHub Action for project "3-implementando-o-solid"

--- a/3-implementando-o-solid/.github/workflows/run-e2e-tests.yml
+++ b/3-implementando-o-solid/.github/workflows/run-e2e-tests.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Copy code to backup folder
         run: |
           mkdir backup
-          mv ./* ./backup/
+          shopt -s dotglob
+          mv -- * backup/
       
       # Copia o conteúdo da pasta 3-implementando-o-solid de backup para a raiz
       - name: Copy content from backup to root
