--- a/3-implementando-o-solid/.github/workflows/run-e2e-tests.yml
+++ b/3-implementando-o-solid/.github/workflows/run-e2e-tests.yml
@@ -6,7 +6,7 @@ on:
       - '3-implementando-o-solid/**'
 
 jobs:
-  run-unit-test:
+  run-e2e-test:
     name: Run E2E Tests
     runs-on: ubuntu-latest
 
@@ -29,8 +29,10 @@ jobs:
       - name: Copy code to backup folder
         run: |
           mkdir backup
-          shopt -s dotglob
-          mv -- * backup/
+          cp -r ./1-fundamentos ./backup/
+          cp -r ./2-rotas-e-http ./backup/
+          cp -r ./3-implementando-o-solid ./backup/
+          cp ./.gitignore ./backup/
       
       # Copia o conteúdo da pasta 3-implementando-o-solid de backup para a raiz
       - name: Copy content from backup to root
@@ -38,8 +40,8 @@ jobs:
             cp -r ./backup/3-implementando-o-solid/* ./
 
       # Apaga o conteúdo da pasta backup (antes do uso do setup-node)
-      - name: Delete backup folder
-        run: rm -rf backup
+      - name: Clean backup folder
+        run: rm -rf backup/*
 
       # Instala o Node no ambiente
       - uses: actions/setup-node@v3
@@ -51,7 +53,7 @@ jobs:
       - run: npm ci
 
       # Executa os testes no diretório raiz
-      - run: npm run test:e2e
+      - run: npm run test
         env:
           JWT_SECRET: testing
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
