--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -53,7 +53,7 @@ jobs:
       - run: npm ci
 
       # Executa os testes no diretório raiz
-      - run: npm run test
+      - run: npm run test:e2e
         env:
           JWT_SECRET: testing
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
