--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.12.5",
+    "eslint": "^8.57.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4"
   }
