feat: configure prisma, add model org and pet

--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -16,7 +16,11 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.12.5",
     "eslint": "^8.57.0",
+    "prisma": "^5.12.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.12.1"
   }
 }
