--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -7,20 +7,26 @@
     "node": ">=20.11.1 <21"
   },
   "scripts": {
-    "start:dev": "tsx watch src/server.ts"
+    "start:dev": "tsx watch src/server.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.5",
     "eslint": "^8.57.0",
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.5.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.12.1"
+    "@prisma/client": "^5.12.1",
+    "bcryptjs": "^2.4.3"
   }
 }
