--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "fastify": "^4.26.2"
   }
 }
