--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -9,7 +9,12 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link --local ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.5",
     "eslint": "^8.57.0",
+    "npm-run-all": "^4.1.5",
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4",
