--- a/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-do-modulo-api-find-a-friend/package.json
@@ -23,17 +23,22 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.5",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "npm-run-all": "^4.1.5",
     "prisma": "^5.12.1",
+    "supertest": "^7.0.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.0"
   },
   "dependencies": {
+    "@fastify/jwt": "^7.2.1",
     "@prisma/client": "^5.12.1",
     "bcryptjs": "^2.4.3",
-    "fastify": "^4.26.2"
+    "dotenv": "^16.4.5",
+    "fastify": "^4.26.2",
+    "zod": "^3.22.4"
   }
 }
