--- a/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
@@ -6,9 +6,17 @@
     "node": "20.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "tsx watch src/server.ts",
+    "start": "node build/server.js",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "20.10.0",
+    "tsup": "8.0.2",
+    "tsx": "4.7.2",
+    "typescript": "5.4.4"
+  }
 }
