--- a/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,8 @@
     "eslint": "8.57.0",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
-    "typescript": "5.4.4"
+    "typescript": "5.4.4",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.5.0"
   }
 }
