--- a/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
@@ -19,10 +19,14 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.10.0",
     "eslint": "8.57.0",
+    "prisma": "5.12.1",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.4",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "1.5.0"
+  },
+  "dependencies": {
+    "@prisma/client": "5.12.1"
   }
 }
