--- a/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
+++ b/3-implementando-o-solid/desafio-solucao-professor-api-find-a-friend/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.12.1",
-    "bcryptjs": "2.4.3"
+    "bcryptjs": "2.4.3",
+    "dotenv": "16.4.5",
+    "zod": "3.22.4"
   }
 }
