--- a/4-ddd-nodejs/projeto-ddd-nodejs/package.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^22.13.11",
     "typescript": "^5.8.2",
+    "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^3.0.9"
   },
   "dependencies": {
