--- a/4-ddd-nodejs/projeto-ddd-nodejs/package.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.13.11",
-    "typescript": "^5.8.2",
-    "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^3.0.9"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^18.15.11",
+    "eslint": "^8.39.0",
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1"
   },
   "dependencies": {
     "dayjs": "^1.11.10"
