--- a/4-ddd-nodejs/projeto-ddd-nodejs/package.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/package.json
@@ -16,6 +16,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
     "eslint": "^8.39.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "typescript": "^5.0.4",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
