--- a/4-ddd-nodejs/projeto-ddd-nodejs/.eslintrc.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/.eslintrc.json
@@ -3,6 +3,9 @@
     "@rocketseat/eslint-config/node",
     "plugin:vitest-globals/recommended"
   ],
+  "rules": {
+    "no-useless-constructor": "off"
+  },
   "env": {
     "vitest-globals/env": true
   }
