feat: implements lib faker to generate test datas

--- a/4-ddd-nodejs/projeto-ddd-nodejs/package.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
     "eslint": "^8.39.0",
