--- a/4-ddd-nodejs/projeto-ddd-nodejs/.eslintrc.json
+++ b/4-ddd-nodejs/projeto-ddd-nodejs/.eslintrc.json
@@ -5,7 +5,8 @@
   ],
   "rules": {
     "no-useless-constructor": "off",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "no-new": "off"
   },
   "env": {
     "vitest-globals/env": true
