--- a/4-nestjs-nodejs/4-nestjs-nodejs/package.json
+++ b/4-nestjs-nodejs/4-nestjs-nodejs/package.json
@@ -21,40 +21,42 @@
     "test:cov": "vitest run --coverage",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
-},
-"dependencies": {
-  "@nestjs/common": "10.0.0",
-  "@nestjs/config": "^3.0.0",
-  "@nestjs/core": "10.0.0",
-  "@nestjs/jwt": "^10.1.0",
-  "@nestjs/passport": "^10.0.1",
-  "@nestjs/platform-express": "10.0.0",
-  "@prisma/client": "^5.2.0",
-  "bcryptjs": "^2.4.3",
-  "passport-jwt": "^4.0.1",
-  "reflect-metadata": "0.1.13",
-  "rxjs": "7.8.1",
-  "zod": "^3.22.2",
-  "zod-validation-error": "^1.5.0"
-},
-"devDependencies": {
-  "@nestjs/cli": "10.0.0",
-  "@nestjs/schematics": "10.0.0",
-  "@nestjs/testing": "10.0.0",
-  "@rocketseat/eslint-config": "2.1.0",
-  "@swc/core": "^1.3.78",
-  "@types/bcryptjs": "^2.4.3",
-  "@types/express": "4.17.17",
-  "@types/node": "20.3.1",
-  "@types/passport-jwt": "^3.0.9",
-  "@vitest/coverage-v8": "^0.34.2",
-  "prisma": "^5.2.0",
-  "source-map-support": "0.5.21",
-  "ts-node": "10.9.1",
-  "tsconfig-paths": "4.2.0",
-  "typescript": "5.1.3",
-  "unplugin-swc": "^1.3.2",
-  "vite-tsconfig-paths": "^4.2.0",
-  "vitest": "^0.34.2"
-}
+  },
+  "dependencies": {
+    "@nestjs/common": "10.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.1",
+    "@nestjs/platform-express": "10.0.0",
+    "@prisma/client": "^5.2.0",
+    "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.8.1",
+    "zod": "^3.22.2",
+    "zod-validation-error": "^1.5.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "10.0.0",
+    "@nestjs/schematics": "10.0.0",
+    "@nestjs/testing": "10.0.0",
+    "@rocketseat/eslint-config": "2.1.0",
+    "@swc/core": "^1.3.78",
+    "@types/bcryptjs": "^2.4.3",
+    "@types/express": "4.17.17",
+    "@types/node": "20.3.1",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/supertest": "2.0.12",
+    "@vitest/coverage-v8": "^0.34.2",
+    "prisma": "^5.2.0",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.3",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.1.3",
+    "unplugin-swc": "^1.3.2",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.2"
+  }
 }
