chore(docker): update PostgreSQL configuration in docker-compose.yml
- Change PostgreSQL database configuration to use named volume for data persistence.
- Remove hardcoded database path and define a named volume 'pgdata' for better management.

--- a/4-nestjs-nodejs/4-nestjs-nodejs/docker-compose.yml
+++ b/4-nestjs-nodejs/4-nestjs-nodejs/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: nest-clean
-      PGDATA: /data/postgres
     volumes:
-      - ./data/pg:/data/postgres
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
