feat(redis): integrate Redis caching into the application
- Add Redis service to docker-compose for caching functionality.
- Update environment configuration to include Redis connection settings.
- Implement caching in PrismaQuestionsRepository to optimize question detail retrieval.
- Modify end-to-end tests to initialize Redis connection and flush database before tests.

--- a/4-nestjs-nodejs/4-nestjs-nodejs/docker-compose.yml
+++ b/4-nestjs-nodejs/4-nestjs-nodejs/docker-compose.yml
@@ -12,5 +12,14 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  redis:
+    container_name: nest-clean-redis
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - redisdata:/data
+
 volumes:
   pgdata:
+  redisdata:
