--- a/5-fast-feet-api/package.json
+++ b/5-fast-feet-api/package.json
@@ -18,5 +18,8 @@
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@types/node": "^24.0.14"
   }
 }
