feat: add RegisterCourier use case with error handling and in-memory repository implementation

--- a/5-fast-feet-api/package.json
+++ b/5-fast-feet-api/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint": "^9.30.1",
     "typescript": "^5.8.3",
