--- a/5-fast-feet-api/package.json
+++ b/5-fast-feet-api/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/node": "^24.3.0",
     "eslint": "^9.30.1",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
