--- a/5-fast-feet-api/package.json
+++ b/5-fast-feet-api/package.json
@@ -13,17 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^24.0.15",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
+    "dayjs": "^1.11.10",
     "eslint": "^8.57.1",
     "typescript": "^5.8.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
-    "@faker-js/faker": "^7.6.0",
-    "dayjs": "^1.11.10"
-  },
-  "dependencies": {
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1"
   }
 }
