--- a/5-nestjs-fast-feet-api/docker-compose.yml
+++ b/5-nestjs-fast-feet-api/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: fast-feet-db
+      POSTGRES_DB: fast_feet_db
       PGDATA: /data/postgres
     volumes: 
       - ./data/pg:/data/postgres
+
