--- a/refazendo-nestjs-forum/docker-compose.yml
+++ b/refazendo-nestjs-forum/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
       POSTGRES_DB: nest-clean
-      PGDATA: /data/postgres
     volumes:
-      - ./data/pg:/data/postgres
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
