--- a/5-nestjs-fast-feet-api/package.json
+++ b/5-nestjs-fast-feet-api/package.json
@@ -45,9 +45,11 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^0.34.6",
     "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
