--- a/5-nestjs-fast-feet-api/tsconfig.json
+++ b/5-nestjs-fast-feet-api/tsconfig.json
@@ -18,6 +18,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "types": [
+      "vitest/globals"
+    ],
     "paths": {
       "@/*": ["src/*"]
     }
