chore: update PostgreSQL image version to 15 in docker-compose.yml

--- a/refazendo-nestjs-forum/docker-compose.yml
+++ b/refazendo-nestjs-forum/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     container_name: nest-clean-pg
-    image: postgres
+    image: postgres:15
     ports:
       - 5432:5432
     environment: 
