--- a/5-nestjs-fast-feet-api/docker-compose.yml
+++ b/5-nestjs-fast-feet-api/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       POSTGRES_DB: fast_feet_db
     volumes: 
       - pgdata:/data/postgres
-
+  cache:
+    container_name: nest-clean-cache
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - ./data/redis:/data
 volumes:
   pgdata:
