--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,9 +1,10 @@
 name: Run E2E Tests
 
 on:
-  pull_request:
+  push:
     paths:
       - '3-implementando-o-solid/**'
+  workflow_dispatch:
 
 jobs:
   run-e2e-test:
@@ -24,36 +25,19 @@ jobs:
       # Coloca o código do projeto no ambiente
       - uses: actions/checkout@v3
 
-      # Cria uma pasta de backup
-      # Copia as pastas e o .gitignore para a pasta backup
-      - name: Copy code to backup folder
-        run: |
-          mkdir backup
-          cp -r ./1-fundamentos ./backup/
-          cp -r ./2-rotas-e-http ./backup/
-          cp -r ./3-implementando-o-solid ./backup/
-          cp ./.gitignore ./backup/
-      
-      # Copia o conteúdo da pasta 3-implementando-o-solid de backup para a raiz
-      - name: Copy content from backup to root
-        run: |
-            cp -r ./backup/3-implementando-o-solid/* ./
-
-      # Apaga o conteúdo da pasta backup (antes do uso do setup-node)
-      - name: Clean backup folder
-        run: rm -rf backup/*
-
       # Instala o Node no ambiente
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
       
-      # Instala as dependências no diretório raiz
+      # Instala as dependências no diretório 3-implementando-o-solid
       - run: npm ci
+        working-directory: ./3-implementando-o-solid
 
-      # Executa os testes no diretório raiz
+      # Executa os testes no diretório 3-implementando-o-solid
       - run: npm run test:e2e
+        working-directory: ./3-implementando-o-solid
         env:
           JWT_SECRET: testing
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
