--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: ./3-implementando-o-solid/package-lock.json
       
       # Instala as dependências no diretório 3-implementando-o-solid
       - run: npm ci
