chore(workflows): add debug step to check for package-lock.json in unit and E2E test workflows

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           node-version: 18
       
+      - name: Debug - Check if package-lock.json exists
+        run: |
+          pwd
+          ls -la ./3-implementando-o-solid/projeto-construido-em-aula-api-gym-pass/ | grep package
       
       - run: npm ci
         working-directory: ./3-implementando-o-solid/projeto-construido-em-aula-api-gym-pass
